--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-swipeable-views": "^0.14.0",
+    "uuid": "^8.3.2",
     "video-react": "^0.15.0"
   },
   "devDependencies": {
